--- a/style.css
+++ b/style.css
@@ -15,3 +15,7 @@ body {
     padding: 20px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
+
+.pointCard input {
+    display: none;
+}
